namespace MartinFowler.Refactoring.Theatre.v8
{
    public class Play
    {
        public string playId;
        public string name;
        public PlayType type;
    }
}